--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-pop boys band name generator</title>
-    <script src="index.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <h1>Click the button to display a random k-pop bands name</h1>
+
+    <input type="button" id="btn" value="In the name of the glory!" />
+
+<p class="bandname"></p>
+
 </body>
 </html>
