working 3num + 3char in html p

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta keywords="k-pop name generator, k-pop">
+    <meta author="Regina Grigorjeva">
     <title>K-pop boys band name generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>Click the button to display a random k-pop bands name</h1>
+    <container>
+        <h1>Click the button to display a random k-pop bands name</h1>
 
-    <input type="button" id="btn" value="In the name of the glory!" />
+        <input type="button" id="btn" value="In the name of the glory!" />
 
-<p class="bandname"></p>
+        <p id="bandname"></p>
+
+        <footer></footer>
+    </container>
+    
 
 </body>
 </html>
