1 form + additions to structure

--- a/news.html
+++ b/news.html
@@ -7,6 +7,10 @@ coming soon
 
 <!-- <section> 	Определяет логическую область (раздел) страницы, обычно с заголовком. -->
 
+    <p>Lorem <sup>5</sup> ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quasi obcaecati dolore inventore aliquid architecto, ipsa, quod expedita omnis natus corrupti, ad voluptatum ullam aperiam accusantium. Qui atque quam sapiente <sub>2</sub>.
+    </p>
+
+    
 <table>
     <caption>Лучшие группы</caption>
     <thead>
